@@ -1,48 +1,0 @@
-<!-- 
-    Copyright 2013, 2014, 2015, 2016, 2017, 2018  joshua.tee@gmail.com
-
-    This file is part of wX.
-
-    wX is free software: you can redistribute it and/or modify
-    it under the terms of the GNU General Public License as published by
-    the Free Software Foundation, either version 3 of the License, or
-    (at your option) any later version.
-
-    wX is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    GNU General Public License for more details.
-
-    You should have received a copy of the GNU General Public License
-    along with wX.  If not, see <http://www.gnu.org/licenses/>.
-
- -->
-
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto" >
-
-    <item android:id="@+id/action_share"
-          android:title="@string/label_share"
-          android:icon="@drawable/ic_share_24dp"
-          app:showAsAction="always"
-        />
-
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="99"
-        app:showAsAction="never"
-        android:title="@string/action_settings"/>
-
-    <item
-        android:id="@+id/action_test"
-        android:orderInCategory="99"
-        app:showAsAction="never"
-        android:title="Test Area - WPC GEFS"/>
-
-    <item
-        android:id="@+id/action_riverdata"
-        android:orderInCategory="99"
-        app:showAsAction="never"
-        android:title="Test Area - River Data"/>
-
-</menu>
