@@ -1,76 +1,0 @@
-<!-- 
-    Copyright 2013, 2014, 2015, 2016, 2017, 2018  joshua.tee@gmail.com
-
-    This file is part of wX.
-
-    wX is free software: you can redistribute it and/or modify
-    it under the terms of the GNU General Public License as published by
-    the Free Software Foundation, either version 3 of the License, or
-    (at your option) any later version.
-
-    wX is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    GNU General Public License for more details.
-
-    You should have received a copy of the GNU General Public License
-    along with wX.  If not, see <http://www.gnu.org/licenses/>.
-
- -->
-
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto"  >
-
-    <item
-        android:id="@+id/action_back"
-        android:icon="@drawable/ic_keyboard_arrow_left_24dp"
-        app:showAsAction="always"
-        android:title="@string/back_arrow"/>
-    <item
-        android:id="@+id/action_forward"
-        android:icon="@drawable/ic_keyboard_arrow_right_24dp"
-        app:showAsAction="always"
-        android:title="@string/forward_arrow"/>
-    <item
-        android:id="@+id/action_animate"
-        android:icon="@drawable/ic_play_arrow_24dp"
-        app:showAsAction="never"
-        android:title="@string/animate_icon"/>
-    <item
-        android:id="@+id/action_share"
-        android:title="@string/label_share"
-        app:showAsAction="never"  />
-    <item
-        android:id="@+id/action_layers"
-        android:title="@string/label_layers"
-        app:showAsAction="never"  >
-        <menu>
-            <item android:id="@+id/action_layer_clear"
-                  android:title="@string/menu_clearall"
-                  app:showAsAction="never"  />
-            <item android:id="@+id/action_layer_rgnlrad"
-                  android:title="@string/action_radar"
-                  app:showAsAction="never"  />
-            <item android:id="@+id/action_layer_warns"
-                  android:title="@string/label_wat_warn"
-                  app:showAsAction="never"  />
-            <item android:id="@+id/action_layer_otlk"
-                  android:title="@string/label_spc_day1"
-                  app:showAsAction="never"  />
-            <item android:id="@+id/action_layer_cwa"
-                  android:title="@string/label_cwa"
-                  app:showAsAction="never"  />
-            <item android:id="@+id/action_layer_hiway"
-                  android:title="@string/label_cities"
-                  app:showAsAction="never"  />
-            <item android:id="@+id/action_layer_cnty"
-                  android:title="@string/label_counties"
-                  app:showAsAction="never"  />
-            <item android:id="@+id/action_layer_population"
-                  android:title="@string/label_population"
-                  app:showAsAction="never"  />
-        </menu>
-    </item>
-</menu>
-
-
